--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "rebatr",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start" 
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
